<resources>
    <string name="app_name">DevPins</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Usuario: </string>
    <string name="prompt_password">Contraseña: </string>
    <string name="prompt_url">Url: </string>
    <string name="prompt_fav">Favorito</string>
    <string name="action_sign_in">Login / Registro</string>
    <string name="action_create_pin">Crear Pin</string>
    <string name="action_update_pin">Actualizar Pin</string>
    <string name="action_action_pin">Acción</string>
    <string name="action_delete_pin">Eliminar Pin</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">PINS</string>
    <string name="tab_text_3">YTPINS</string>
    <string name="tab_text_4">PODPINS</string>
    <string name="radio_text_1">Pin</string>
    <string name="radio_text_2">YouTube</string>
    <string name="radio_text_3">PodCast</string>
    <string name="zero">0:00</string>
</resources>