<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePinActivity">


    <EditText
        android:id="@+id/editTextNewPinUrl"
        android:layout_width="374dp"
        android:layout_height="46dp"
        android:layout_marginTop="216dp"
        android:autofillHints="@string/prompt_url"
        android:background="@color/primary_black"
        android:ems="10"
        android:hint="@string/prompt_url"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />


    <Button
        android:id="@+id/buttonCreatePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_create_pin"
        android:onClick="savePin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPinUrl"
        app:layout_constraintVertical_bias="0.163" />

    <Switch
        android:id="@+id/switchFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_fav"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreatePin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewPinUrl" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="256dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreatePin"
        app:layout_constraintVertical_bias="0.097">

        <RadioButton
            android:id="@+id/radio_basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_text_1" />

        <RadioButton
            android:id="@+id/radio_yt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_text_2" />

        <RadioButton
            android:id="@+id/radio_pod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radio_text_3" />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>