<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_black"
    tools:context=".UpdatePinActivity">

    <EditText
        android:id="@+id/editTextUpdatePinUrl"
        android:layout_width="374dp"
        android:layout_height="46dp"
        android:autofillHints="@string/prompt_url"
        android:background="@color/primary_black"
        android:ems="10"
        android:hint="@string/prompt_url"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/buttonUpdatePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:onClick="updatePin"
        android:text="@string/action_update_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdatePinUrl" />

    <Button
        android:id="@+id/buttonActionPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="updatePin"
        android:text="@string/action_action_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUpdatePin" />

    <Button
        android:id="@+id/buttonDeletePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="deletePin"
        android:text="@string/action_delete_pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonActionPin"
        app:layout_constraintVertical_bias="0.046" />

    <Switch
        android:id="@+id/switchFavEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_fav"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpdatePin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdatePinUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>